# neatd

./: Cargo.toml  LICENSE  README.md  config.toml
docs/: ARCHITECTURE.md  CONFIG.md  DESIGN_DECISIONS.md  HIGH_LEVEL_DESIGN.md  PROGRESS.md  README.md  ROADMAP.md  RULES.md  SAFETY.md  USER_STORIES.md
docs/stories/: README.md
docs/stories/epic0/: EPIC0-1-CODE-TEMPLATE.rs  EPIC0-1-IMPLEMENTATION-GUIDE.md  EPIC0-1-QUICK-START.md  EPIC0-1.md  EPIC0-2.md  EPIC0-3.md
docs/stories/epic1/: EPIC1-1.md  EPIC1-2.md  EPIC1-3.md  EPIC1-4.md  EPIC1-5.md  EPIC1-6.md  EPIC1-7.md
docs/stories/epic2/: EPIC2-1.md  EPIC2-2.md  EPIC2-3.md  EPIC2-4.md  EPIC2-5.md
docs/stories/epic3/: EPIC3-1.md  EPIC3-10.md  EPIC3-11.md  EPIC3-12.md  EPIC3-2.md  EPIC3-3.md  EPIC3-4.md  EPIC3-5.md  EPIC3-6.md  EPIC3-7.md  EPIC3-8.md  EPIC3-9.md
docs/stories/epic4/: EPIC4-1.md  EPIC4-10.md  EPIC4-11.md  EPIC4-12.md  EPIC4-13.md  EPIC4-14.md  EPIC4-2.md  EPIC4-3.md  EPIC4-4.md  EPIC4-5.md  EPIC4-6.md  EPIC4-7.md  EPIC4-8.md  EPIC4-9.md
docs/stories/epic5/: EPIC5-1.md  EPIC5-2.md  EPIC5-3.md  EPIC5-4.md  EPIC5-5.md  EPIC5-6.md
docs/stories/epic6/: EPIC6-1.md  EPIC6-2.md  EPIC6-3.md  EPIC6-4.md  EPIC6-5.md  EPIC6-6.md  EPIC6-7.md  EPIC6-8.md  EPIC6-9.md
docs/stories/epic7/: EPIC7-1.md  EPIC7-2.md  EPIC7-3.md
src/: args.rs  config_file_data.rs  init.rs  main.rs
src/config/: display.rs  mod.rs
src/directory/: mod.rs
src/init/: directory.rs  mod.rs
src/parse/: mod.rs
src/run/: mod.rs
src/run/config/: config.rs  display.rs
src/validate/: error.rs  mod.rs  validator.rs
(+9 files in other folders)
