[package]
name = "neatd"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "*" }
clap = { version = "4.5.53", features = ["derive"] }
os_info = { version = "*" }
dirs = { version = "*" }
toml = { version = "*" }
serde = { version = "*", features = ["derive"] }
colored = { version = "*" }
